--- a/htaccess.example
+++ b/htaccess.example
@@ -4,4 +4,5 @@ AddDefaultCharset UTF-8
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php/$1 [QSA,L]
+    RewriteRule ^public/ - [L,NC]
 </IfModule>
